// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Input> snapshot 1`] = `
<div>
  <div
    class="wrapper"
  >
    <input
      class="input"
      placeholder="input field"
    />
  </div>
</div>
`;

exports[`<Input> snapshot error message 1`] = `
<div>
  <div
    class="wrapper"
  >
    <input
      class="input error"
    />
    <span
      class="errorMessage"
    >
      Field is not valid
    </span>
  </div>
</div>
`;

exports[`<Input> snapshot right side element 1`] = `
<div>
  <div
    class="wrapper"
  >
    <input
      class="input indentRight"
    />
    <div
      class="endAdornment"
    >
      <div>
        Right Side Element
      </div>
    </div>
  </div>
</div>
`;
